--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,216 @@
 .prettierrc
+Acts/PDF/1.pdf
+Acts/PDF/11.pdf
+Acts/PDF/12.pdf
+Acts/PDF/13.pdf
+Acts/PDF/14.pdf
+Acts/PDF/15.pdf
+Acts/PDF/16.pdf
+Acts/PDF/17.pdf
+Acts/PDF/18.pdf
+Acts/PDF/19.pdf
+Acts/PDF/20.pdf
+Acts/PDF/21.pdf
+Acts/PDF/22.pdf
+Acts/PDF/23.pdf
+Acts/PDF/24.pdf
+Acts/PDF/25.pdf
+Acts/PDF/26.pdf
+Acts/PDF/27.pdf
+Acts/PDF/28.pdf
+Acts/PDF/29.pdf
+Acts/PDF/30.pdf
+Acts/PDF/31.pdf
+Acts/PDF/32.pdf
+Acts/PDF/33.pdf
+Acts/PDF/34.pdf
+Acts/PDF/35.pdf
+Acts/PDF/36.pdf
+Acts/PDF/37.pdf
+Acts/PDF/38.pdf
+Acts/PDF/39.pdf
+Acts/PDF/40.pdf
+Acts/PDF/41.pdf
+Acts/PDF/42.pdf
+Acts/PDF/43.pdf
+Acts/PDF/44.pdf
+Acts/PDF/45.pdf
+Acts/PDF/46.pdf
+Acts/PDF/47.pdf
+Acts/PDF/48.pdf
+Acts/PDF/49.pdf
+Acts/PDF/50.pdf
+Acts/PDF/51.pdf
+Acts/PDF/52.pdf
+Acts/PDF/53.pdf
+Acts/PDF/54.pdf
+Acts/PDF/55.pdf
+Acts/PDF/56.pdf
+Acts/PDF/57.pdf
+Acts/PDF/58.pdf
+Acts/PDF/59.pdf
+Acts/PDF/60.pdf
+Acts/PDF/61.pdf
+Acts/PDF/62.pdf
+Acts/PDF/63.pdf
+Acts/PDF/64.pdf
+Acts/PDF/65.pdf
+Acts/PDF/66.pdf
+Acts/PDF/67.pdf
+Acts/PDF/68.pdf
+Acts/PDF/69.pdf
+Acts/PDF/70.pdf
+Acts/PDF/71.pdf
+Acts/PDF/72.pdf
+Acts/PDF/73.pdf
+Acts/PDF/74.pdf
+Acts/PDF/75.pdf
+Acts/PDF/76.pdf
+Acts/PDF/77.pdf
+Acts/PDF/78.pdf
+Acts/PDF/79.pdf
+Acts/PDF/80.pdf
+Acts/PDF/81.pdf
+Acts/PDF/82.pdf
+Acts/PDF/83.pdf
+Acts/PDF/84.pdf
+Acts/PDF/85.pdf
+Acts/PDF/86.pdf
+Acts/PDF/87.pdf
+Acts/PDF/88.pdf
+Acts/PDF/89.pdf
+Acts/PDF/90.pdf
+Acts/PDF/91.pdf
+Acts/PDF/92.pdf
+Acts/PDF/93.pdf
+Acts/PDF/94.pdf
+Acts/PDF/95.pdf
+Acts/PDF/96.pdf
+Acts/PDF/97.pdf
+Acts/PDF/98.pdf
+Acts/PDF/99.pdf
+Acts/PDF/100.pdf
+Acts/PDF/101.pdf
+Acts/PDF/102.pdf
+Acts/PDF/103.pdf
+Acts/PDF/104.pdf
+Acts/PDF/105.pdf
+Acts/PDF/106.pdf
+Acts/PDF/107.pdf
+Acts/PDF/108.pdf
+Acts/PDF/109.pdf
+Acts/PDF/110.pdf
+Acts/PDF/111.pdf
+Acts/PDF/112.pdf
+Acts/PDF/113.pdf
+Acts/PDF/114.pdf
+Acts/XLS/1.xlsx
+Acts/XLS/11.xlsx
+Acts/XLS/12.xlsx
+Acts/XLS/13.xlsx
+Acts/XLS/14.xlsx
+Acts/XLS/15.xlsx
+Acts/XLS/16.xlsx
+Acts/XLS/17.xlsx
+Acts/XLS/18.xlsx
+Acts/XLS/19.xlsx
+Acts/XLS/20.xlsx
+Acts/XLS/21.xlsx
+Acts/XLS/22.xlsx
+Acts/XLS/23.xlsx
+Acts/XLS/24.xlsx
+Acts/XLS/25.xlsx
+Acts/XLS/26.xlsx
+Acts/XLS/27.xlsx
+Acts/XLS/28.xlsx
+Acts/XLS/29.xlsx
+Acts/XLS/30.xlsx
+Acts/XLS/31.xlsx
+Acts/XLS/32.xlsx
+Acts/XLS/33.xlsx
+Acts/XLS/34.xlsx
+Acts/XLS/35.xlsx
+Acts/XLS/36.xlsx
+Acts/XLS/37.xlsx
+Acts/XLS/38.xlsx
+Acts/XLS/39.xlsx
+Acts/XLS/40.xlsx
+Acts/XLS/41.xlsx
+Acts/XLS/42.xlsx
+Acts/XLS/43.xlsx
+Acts/XLS/44.xlsx
+Acts/XLS/45.xlsx
+Acts/XLS/46.xlsx
+Acts/XLS/47.xlsx
+Acts/XLS/48.xlsx
+Acts/XLS/49.xlsx
+Acts/XLS/50.xlsx
+Acts/XLS/51.xlsx
+Acts/XLS/52.xlsx
+Acts/XLS/53.xlsx
+Acts/XLS/54.xlsx
+Acts/XLS/55.xlsx
+Acts/XLS/56.xlsx
+Acts/XLS/57.xlsx
+Acts/XLS/58.xlsx
+Acts/XLS/59.xlsx
+Acts/XLS/60.xlsx
+Acts/XLS/61.xlsx
+Acts/XLS/62.xlsx
+Acts/XLS/63.xlsx
+Acts/XLS/64.xlsx
+Acts/XLS/65.xlsx
+Acts/XLS/66.xlsx
+Acts/XLS/67.xlsx
+Acts/XLS/68.xlsx
+Acts/XLS/69.xlsx
+Acts/XLS/70.xlsx
+Acts/XLS/71.xlsx
+Acts/XLS/72.xlsx
+Acts/XLS/73.xlsx
+Acts/XLS/74.xlsx
+Acts/XLS/75.xlsx
+Acts/XLS/76.xlsx
+Acts/XLS/77.xlsx
+Acts/XLS/78.xlsx
+Acts/XLS/79.xlsx
+Acts/XLS/80.xlsx
+Acts/XLS/81.xlsx
+Acts/XLS/82.xlsx
+Acts/XLS/83.xlsx
+Acts/XLS/84.xlsx
+Acts/XLS/85.xlsx
+Acts/XLS/86.xlsx
+Acts/XLS/87.xlsx
+Acts/XLS/88.xlsx
+Acts/XLS/89.xlsx
+Acts/XLS/90.xlsx
+Acts/XLS/91.xlsx
+Acts/XLS/92.xlsx
+Acts/XLS/93.xlsx
+Acts/XLS/94.xlsx
+Acts/XLS/95.xlsx
+Acts/XLS/96.xlsx
+Acts/XLS/97.xlsx
+Acts/XLS/98.xlsx
+Acts/XLS/99.xlsx
+Acts/XLS/100.xlsx
+Acts/XLS/101.xlsx
+Acts/XLS/102.xlsx
+Acts/XLS/103.xlsx
+Acts/XLS/104.xlsx
+Acts/XLS/105.xlsx
+Acts/XLS/106.xlsx
+Acts/XLS/107.xlsx
+Acts/XLS/108.xlsx
+Acts/XLS/109.xlsx
+Acts/XLS/110.xlsx
+Acts/XLS/111.xlsx
+Acts/XLS/112.xlsx
+Acts/XLS/113.xlsx
+Acts/XLS/114.xlsx
+docs/project.xlsx
+docs/журнал_аоср.csv
+docs/реестр_ид.csv
+docs/журнал_аоср.csv
+docs/реестр_ид.csv
